test(components): add basic tests
some basic testing for props and child rendering

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "precommit": "npm test",
     "prepush": "npm test",
     "prerelease": "npm run transpile; npm test",
-    "pretest": "NODE_ENV=test",
+    "pretest": "NODE_ENV=test npm run babel",
     "posttest": "npm run lint",
     "release": "standard-version --no-verify",
     "server": "cd docs && http-server",
     "start": "npm run build && npm run server",
-    "test": "babel-node ./node_modules/istanbul/lib/cli.js cover _mocha -- ./src/**/spec/*.js",
+    "test": "babel-node ./node_modules/istanbul/lib/cli.js cover _mocha -- ./lib/**/spec/*.js",
     "watch": "BABEL_ENV=development node ./scripts/watch"
   },
   "repository": {
@@ -41,9 +41,11 @@
     "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "chai": "^3.5.0",
     "coveralls": "^2.11.14",
     "css-modulesify": "^0.25.1",
     "cz-conventional-changelog": "^1.2.0",
+    "enzyme": "^2.4.1",
     "errorify": "^0.3.1",
     "eslint": "^3.5.0",
     "eslint-config-standard": "^6.0.1",
@@ -55,11 +57,14 @@
     "husky": "^0.11.8",
     "jest": "^15.1.1",
     "jsdoc": "^3.4.1",
+    "jsdom": "^9.5.0",
     "livereactload": "^3.0.0",
     "log": "^1.4.0",
     "mocha": "^3.0.2",
     "nyc": "^8.3.0",
     "postcss-cssnext": "^2.8.0",
+    "react-addons-test-utils": "^15.3.2",
+    "sinon": "^1.17.6",
     "standard-version": "^2.4.0",
     "watchify": "^3.7.0"
   },
