fix(test): dependencies
fixed wrong dependencies

--- a/package.json
+++ b/package.json
@@ -55,16 +55,14 @@
     "hopsdoc": "^0.1.7",
     "http-server": "^0.9.0",
     "husky": "^0.11.8",
-    "jest": "^15.1.1",
     "jsdoc": "^3.4.1",
     "jsdom": "^9.5.0",
     "livereactload": "^3.0.0",
     "log": "^1.4.0",
     "mocha": "^3.0.2",
-    "nyc": "^8.3.0",
+    "istanbul": "git://github.com/pixelass/istanbul.git#v1",
     "postcss-cssnext": "^2.8.0",
     "react-addons-test-utils": "^15.3.2",
-    "sinon": "^1.17.6",
     "standard-version": "^2.4.0",
     "watchify": "^3.7.0"
   },
