--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "precommit": "npm test",
     "prepush": "npm test",
     "prerelease": "npm run transpile; npm test",
-    "pretest": "NODE_ENV=test",
     "posttest": "npm run lint",
     "release": "standard-version --no-verify",
     "server": "cd docs && http-server",
     "start": "npm run build && npm run server",
-    "test": "jest",
+    "test": "jest --no-cache --coverage",
     "watch": "BABEL_ENV=development node ./scripts/watch"
   },
   "repository": {
@@ -32,8 +31,14 @@
     "url": "https://github.com/pixelass/schachtel/issues"
   },
   "homepage": "https://github.com/pixelass/schachtel#readme",
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
+  },
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-jest": "^15.0.0",
     "babel-plugin-css-modules-transform": "^1.1.0",
     "babel-plugin-istanbul": "^2.0.1",
     "babel-preset-es2015": "^6.14.0",
@@ -41,7 +46,6 @@
     "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
-    "chai": "^3.5.0",
     "coveralls": "^2.11.14",
     "css-modulesify": "^0.25.1",
     "cz-conventional-changelog": "^1.2.0",
@@ -57,13 +61,13 @@
     "husky": "^0.11.8",
     "istanbul": "git://github.com/pixelass/istanbul.git#v1",
     "jest": "^15.1.1",
+    "jest-css-modules": "^1.0.2",
     "jsdoc": "^3.4.1",
-    "jsdom": "^9.5.0",
     "livereactload": "^3.0.0",
     "log": "^1.4.0",
-    "mocha": "^3.0.2",
     "postcss-cssnext": "^2.8.0",
     "react-addons-test-utils": "^15.3.2",
+    "sinon": "^1.17.6",
     "standard-version": "^2.4.0",
     "watchify": "^3.7.0"
   },
@@ -87,12 +91,8 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "classnames": "^2.2.5",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
-  },
   "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/jest-css-modules",
     "testRegex": ".*/src/.*/spec/.*\\.js$"
   }
 }
